// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timerReducer FINISH_TIMER should match snapshot 1`] = `
Object {
  "active": false,
  "currentTime": 5000,
  "metadata": Object {
    "todaysDate": 1,
    "todaysSessionLength": 0,
  },
  "sessionLength": 5000,
}
`;

exports[`timerReducer RESET_TIMER should match snapshot 1`] = `
Object {
  "active": false,
  "currentTime": 5000,
  "metadata": Object {
    "todaysDate": 1,
    "todaysSessionLength": 0,
  },
  "sessionLength": 5000,
}
`;

exports[`timerReducer STOP_TIMER should match snapshot 1`] = `
Object {
  "active": false,
  "currentTime": 0,
  "metadata": Object {
    "todaysDate": 1,
    "todaysSessionLength": 0,
  },
  "sessionLength": 900,
}
`;

exports[`timerReducer UPDATE_SESSION_LENGTH should update sessionLength and match snapshot 1`] = `
Object {
  "active": false,
  "currentTime": 0,
  "metadata": Object {
    "todaysDate": 1,
    "todaysSessionLength": 0,
  },
  "sessionLength": 2000,
}
`;
